--- a/web/static/html/chat.html
+++ b/web/static/html/chat.html
@@ -11,9 +11,9 @@
 <body onload="get_current()">
     <style media="screen">
         #Contacts {
-            height: 500px;
+            height: 100%;
             border: 5px solid #4050df;
-            width: 30%;
+            width: 100%;
         }
         #messages {
             height: 500px;
@@ -21,19 +21,19 @@
             width: 100%;
         }
         </style>
-    <table width="80%" ,border="20px">
-        <tr width="40%">
-            <td width="50%">
+    <table width="100%" style="height: 96vh;" border="1px">
+        <tr width="100%">
+            <td width="10%">
                 <div id="Contacts">
                 <div onload="get_current()">Contacts</div>
                 </div>
             </td>
-            <td width="100%">
+            <td width="90%">
                 <div id="messages"></div>
             </td>
         </tr>
-        <tr width="20%">
-            <td width="%50">
+        <tr width="100%">
+            <td width="%100">
             </td>
             <td width="50%">
                 <div id="cb">
